// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Source /> should display the same view for each render 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <Route
    render={[Function]}
/>,
  "nodes": Array [
    <Route
      render={[Function]}
/>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 2,
      "_context": Object {},
      "_currentElement": <withRouter(Source) />,
      "_debugID": 1,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": StatelessComponent {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {},
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 1,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <Route
          render={[Function]}
/>,
        "_debugID": 2,
        "_renderedOutput": <Route
          render={[Function]}
/>,
      },
      "_renderedNodeType": 1,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <withRouter(Source) />,
}
`;

exports[`<Source /> should render 1 <Sources /> 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <div
    className="row"
>
    <withRouter(Source)
        source={
            Object {
                "category": "general",
                "country": "au",
                "description": "Australia's most trusted source of local, national and world news. Comprehensive, independent, in-depth analysis, the latest business, sport, weather and more.",
                "id": "abc-news-au",
                "language": "en",
                "name": "ABC News (AU)",
                "sortBysAvailable": Array [
                  "top",
                ],
                "url": "http://www.abc.net.au/news",
                "urlsToLogos": Object {
                  "large": "",
                  "medium": "",
                  "small": "",
                },
              }
        }
    />
    <withRouter(Source)
        source={
            Object {
                "category": "general",
                "country": "us",
                "description": "News, analysis from the Middle East and worldwide, multimedia and interactives, opinions, documentaries, podcasts, long reads and broadcast schedule.",
                "id": "al-jazeera-english",
                "language": "en",
                "name": "Al Jazeera English",
                "sortBysAvailable": Array [
                  "top",
                  "latest",
                ],
                "url": "http://www.aljazeera.com",
                "urlsToLogos": Object {
                  "large": "",
                  "medium": "",
                  "small": "",
                },
              }
        }
    />
    <withRouter(Source)
        source={
            Object {
                "category": "technology",
                "country": "us",
                "description": "The PC enthusiast's resource. Power users and the tools they love, without computing religion.",
                "id": "ars-technica",
                "language": "en",
                "name": "Ars Technica",
                "sortBysAvailable": Array [
                  "top",
                  "latest",
                ],
                "url": "http://arstechnica.com",
                "urlsToLogos": Object {
                  "large": "",
                  "medium": "",
                  "small": "",
                },
              }
        }
    />
    <withRouter(Source)
        source={
            Object {
                "category": "general",
                "country": "us",
                "description": "The AP delivers in-depth coverage on the international, politics, lifestyle, business, and entertainment news.",
                "id": "associated-press",
                "language": "en",
                "name": "Associated Press",
                "sortBysAvailable": Array [
                  "top",
                ],
                "url": "https://apnews.com/",
                "urlsToLogos": Object {
                  "large": "",
                  "medium": "",
                  "small": "",
                },
              }
        }
    />
</div>,
  "nodes": Array [
    <div
      className="row"
>
      <withRouter(Source)
            source={
                  Object {
                        "category": "general",
                        "country": "au",
                        "description": "Australia's most trusted source of local, national and world news. Comprehensive, independent, in-depth analysis, the latest business, sport, weather and more.",
                        "id": "abc-news-au",
                        "language": "en",
                        "name": "ABC News (AU)",
                        "sortBysAvailable": Array [
                          "top",
                        ],
                        "url": "http://www.abc.net.au/news",
                        "urlsToLogos": Object {
                          "large": "",
                          "medium": "",
                          "small": "",
                        },
                      }
            }
      />
      <withRouter(Source)
            source={
                  Object {
                        "category": "general",
                        "country": "us",
                        "description": "News, analysis from the Middle East and worldwide, multimedia and interactives, opinions, documentaries, podcasts, long reads and broadcast schedule.",
                        "id": "al-jazeera-english",
                        "language": "en",
                        "name": "Al Jazeera English",
                        "sortBysAvailable": Array [
                          "top",
                          "latest",
                        ],
                        "url": "http://www.aljazeera.com",
                        "urlsToLogos": Object {
                          "large": "",
                          "medium": "",
                          "small": "",
                        },
                      }
            }
      />
      <withRouter(Source)
            source={
                  Object {
                        "category": "technology",
                        "country": "us",
                        "description": "The PC enthusiast's resource. Power users and the tools they love, without computing religion.",
                        "id": "ars-technica",
                        "language": "en",
                        "name": "Ars Technica",
                        "sortBysAvailable": Array [
                          "top",
                          "latest",
                        ],
                        "url": "http://arstechnica.com",
                        "urlsToLogos": Object {
                          "large": "",
                          "medium": "",
                          "small": "",
                        },
                      }
            }
      />
      <withRouter(Source)
            source={
                  Object {
                        "category": "general",
                        "country": "us",
                        "description": "The AP delivers in-depth coverage on the international, politics, lifestyle, business, and entertainment news.",
                        "id": "associated-press",
                        "language": "en",
                        "name": "Associated Press",
                        "sortBysAvailable": Array [
                          "top",
                        ],
                        "url": "https://apnews.com/",
                        "urlsToLogos": Object {
                          "large": "",
                          "medium": "",
                          "small": "",
                        },
                      }
            }
      />
</div>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 0,
      "_context": Object {},
      "_currentElement": <Sources
        sources={
                Array [
                        Object {
                          "category": "general",
                          "country": "au",
                          "description": "Australia's most trusted source of local, national and world news. Comprehensive, independent, in-depth analysis, the latest business, sport, weather and more.",
                          "id": "abc-news-au",
                          "language": "en",
                          "name": "ABC News (AU)",
                          "sortBysAvailable": Array [
                            "top",
                          ],
                          "url": "http://www.abc.net.au/news",
                          "urlsToLogos": Object {
                            "large": "",
                            "medium": "",
                            "small": "",
                          },
                        },
                        Object {
                          "category": "general",
                          "country": "us",
                          "description": "News, analysis from the Middle East and worldwide, multimedia and interactives, opinions, documentaries, podcasts, long reads and broadcast schedule.",
                          "id": "al-jazeera-english",
                          "language": "en",
                          "name": "Al Jazeera English",
                          "sortBysAvailable": Array [
                            "top",
                            "latest",
                          ],
                          "url": "http://www.aljazeera.com",
                          "urlsToLogos": Object {
                            "large": "",
                            "medium": "",
                            "small": "",
                          },
                        },
                        Object {
                          "category": "technology",
                          "country": "us",
                          "description": "The PC enthusiast's resource. Power users and the tools they love, without computing religion.",
                          "id": "ars-technica",
                          "language": "en",
                          "name": "Ars Technica",
                          "sortBysAvailable": Array [
                            "top",
                            "latest",
                          ],
                          "url": "http://arstechnica.com",
                          "urlsToLogos": Object {
                            "large": "",
                            "medium": "",
                            "small": "",
                          },
                        },
                        Object {
                          "category": "general",
                          "country": "us",
                          "description": "The AP delivers in-depth coverage on the international, politics, lifestyle, business, and entertainment news.",
                          "id": "associated-press",
                          "language": "en",
                          "name": "Associated Press",
                          "sortBysAvailable": Array [
                            "top",
                          ],
                          "url": "https://apnews.com/",
                          "urlsToLogos": Object {
                            "large": "",
                            "medium": "",
                            "small": "",
                          },
                        },
                      ]
        }
/>,
      "_debugID": 3,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": Sources {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "sources": Array [
            Object {
              "category": "general",
              "country": "au",
              "description": "Australia's most trusted source of local, national and world news. Comprehensive, independent, in-depth analysis, the latest business, sport, weather and more.",
              "id": "abc-news-au",
              "language": "en",
              "name": "ABC News (AU)",
              "sortBysAvailable": Array [
                "top",
              ],
              "url": "http://www.abc.net.au/news",
              "urlsToLogos": Object {
                "large": "",
                "medium": "",
                "small": "",
              },
            },
            Object {
              "category": "general",
              "country": "us",
              "description": "News, analysis from the Middle East and worldwide, multimedia and interactives, opinions, documentaries, podcasts, long reads and broadcast schedule.",
              "id": "al-jazeera-english",
              "language": "en",
              "name": "Al Jazeera English",
              "sortBysAvailable": Array [
                "top",
                "latest",
              ],
              "url": "http://www.aljazeera.com",
              "urlsToLogos": Object {
                "large": "",
                "medium": "",
                "small": "",
              },
            },
            Object {
              "category": "technology",
              "country": "us",
              "description": "The PC enthusiast's resource. Power users and the tools they love, without computing religion.",
              "id": "ars-technica",
              "language": "en",
              "name": "Ars Technica",
              "sortBysAvailable": Array [
                "top",
                "latest",
              ],
              "url": "http://arstechnica.com",
              "urlsToLogos": Object {
                "large": "",
                "medium": "",
                "small": "",
              },
            },
            Object {
              "category": "general",
              "country": "us",
              "description": "The AP delivers in-depth coverage on the international, politics, lifestyle, business, and entertainment news.",
              "id": "associated-press",
              "language": "en",
              "name": "Associated Press",
              "sortBysAvailable": Array [
                "top",
              ],
              "url": "https://apnews.com/",
              "urlsToLogos": Object {
                "large": "",
                "medium": "",
                "small": "",
              },
            },
          ],
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 2,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <div
          className="row"
>
          <withRouter(Source)
                    source={
                              Object {
                                        "category": "general",
                                        "country": "au",
                                        "description": "Australia's most trusted source of local, national and world news. Comprehensive, independent, in-depth analysis, the latest business, sport, weather and more.",
                                        "id": "abc-news-au",
                                        "language": "en",
                                        "name": "ABC News (AU)",
                                        "sortBysAvailable": Array [
                                          "top",
                                        ],
                                        "url": "http://www.abc.net.au/news",
                                        "urlsToLogos": Object {
                                          "large": "",
                                          "medium": "",
                                          "small": "",
                                        },
                                      }
                    }
          />
          <withRouter(Source)
                    source={
                              Object {
                                        "category": "general",
                                        "country": "us",
                                        "description": "News, analysis from the Middle East and worldwide, multimedia and interactives, opinions, documentaries, podcasts, long reads and broadcast schedule.",
                                        "id": "al-jazeera-english",
                                        "language": "en",
                                        "name": "Al Jazeera English",
                                        "sortBysAvailable": Array [
                                          "top",
                                          "latest",
                                        ],
                                        "url": "http://www.aljazeera.com",
                                        "urlsToLogos": Object {
                                          "large": "",
                                          "medium": "",
                                          "small": "",
                                        },
                                      }
                    }
          />
          <withRouter(Source)
                    source={
                              Object {
                                        "category": "technology",
                                        "country": "us",
                                        "description": "The PC enthusiast's resource. Power users and the tools they love, without computing religion.",
                                        "id": "ars-technica",
                                        "language": "en",
                                        "name": "Ars Technica",
                                        "sortBysAvailable": Array [
                                          "top",
                                          "latest",
                                        ],
                                        "url": "http://arstechnica.com",
                                        "urlsToLogos": Object {
                                          "large": "",
                                          "medium": "",
                                          "small": "",
                                        },
                                      }
                    }
          />
          <withRouter(Source)
                    source={
                              Object {
                                        "category": "general",
                                        "country": "us",
                                        "description": "The AP delivers in-depth coverage on the international, politics, lifestyle, business, and entertainment news.",
                                        "id": "associated-press",
                                        "language": "en",
                                        "name": "Associated Press",
                                        "sortBysAvailable": Array [
                                          "top",
                                        ],
                                        "url": "https://apnews.com/",
                                        "urlsToLogos": Object {
                                          "large": "",
                                          "medium": "",
                                          "small": "",
                                        },
                                      }
                    }
          />
</div>,
        "_debugID": 4,
        "_renderedOutput": <div
          className="row"
>
          <withRouter(Source)
                    source={
                              Object {
                                        "category": "general",
                                        "country": "au",
                                        "description": "Australia's most trusted source of local, national and world news. Comprehensive, independent, in-depth analysis, the latest business, sport, weather and more.",
                                        "id": "abc-news-au",
                                        "language": "en",
                                        "name": "ABC News (AU)",
                                        "sortBysAvailable": Array [
                                          "top",
                                        ],
                                        "url": "http://www.abc.net.au/news",
                                        "urlsToLogos": Object {
                                          "large": "",
                                          "medium": "",
                                          "small": "",
                                        },
                                      }
                    }
          />
          <withRouter(Source)
                    source={
                              Object {
                                        "category": "general",
                                        "country": "us",
                                        "description": "News, analysis from the Middle East and worldwide, multimedia and interactives, opinions, documentaries, podcasts, long reads and broadcast schedule.",
                                        "id": "al-jazeera-english",
                                        "language": "en",
                                        "name": "Al Jazeera English",
                                        "sortBysAvailable": Array [
                                          "top",
                                          "latest",
                                        ],
                                        "url": "http://www.aljazeera.com",
                                        "urlsToLogos": Object {
                                          "large": "",
                                          "medium": "",
                                          "small": "",
                                        },
                                      }
                    }
          />
          <withRouter(Source)
                    source={
                              Object {
                                        "category": "technology",
                                        "country": "us",
                                        "description": "The PC enthusiast's resource. Power users and the tools they love, without computing religion.",
                                        "id": "ars-technica",
                                        "language": "en",
                                        "name": "Ars Technica",
                                        "sortBysAvailable": Array [
                                          "top",
                                          "latest",
                                        ],
                                        "url": "http://arstechnica.com",
                                        "urlsToLogos": Object {
                                          "large": "",
                                          "medium": "",
                                          "small": "",
                                        },
                                      }
                    }
          />
          <withRouter(Source)
                    source={
                              Object {
                                        "category": "general",
                                        "country": "us",
                                        "description": "The AP delivers in-depth coverage on the international, politics, lifestyle, business, and entertainment news.",
                                        "id": "associated-press",
                                        "language": "en",
                                        "name": "Associated Press",
                                        "sortBysAvailable": Array [
                                          "top",
                                        ],
                                        "url": "https://apnews.com/",
                                        "urlsToLogos": Object {
                                          "large": "",
                                          "medium": "",
                                          "small": "",
                                        },
                                      }
                    }
          />
</div>,
      },
      "_renderedNodeType": 0,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <Sources
    sources={
        Array [
            Object {
              "category": "general",
              "country": "au",
              "description": "Australia's most trusted source of local, national and world news. Comprehensive, independent, in-depth analysis, the latest business, sport, weather and more.",
              "id": "abc-news-au",
              "language": "en",
              "name": "ABC News (AU)",
              "sortBysAvailable": Array [
                "top",
              ],
              "url": "http://www.abc.net.au/news",
              "urlsToLogos": Object {
                "large": "",
                "medium": "",
                "small": "",
              },
            },
            Object {
              "category": "general",
              "country": "us",
              "description": "News, analysis from the Middle East and worldwide, multimedia and interactives, opinions, documentaries, podcasts, long reads and broadcast schedule.",
              "id": "al-jazeera-english",
              "language": "en",
              "name": "Al Jazeera English",
              "sortBysAvailable": Array [
                "top",
                "latest",
              ],
              "url": "http://www.aljazeera.com",
              "urlsToLogos": Object {
                "large": "",
                "medium": "",
                "small": "",
              },
            },
            Object {
              "category": "technology",
              "country": "us",
              "description": "The PC enthusiast's resource. Power users and the tools they love, without computing religion.",
              "id": "ars-technica",
              "language": "en",
              "name": "Ars Technica",
              "sortBysAvailable": Array [
                "top",
                "latest",
              ],
              "url": "http://arstechnica.com",
              "urlsToLogos": Object {
                "large": "",
                "medium": "",
                "small": "",
              },
            },
            Object {
              "category": "general",
              "country": "us",
              "description": "The AP delivers in-depth coverage on the international, politics, lifestyle, business, and entertainment news.",
              "id": "associated-press",
              "language": "en",
              "name": "Associated Press",
              "sortBysAvailable": Array [
                "top",
              ],
              "url": "https://apnews.com/",
              "urlsToLogos": Object {
                "large": "",
                "medium": "",
                "small": "",
              },
            },
          ]
    }
/>,
}
`;
